Renamed environment to match setup instructions.

--- a/keras-pytorch_environment.yml
+++ b/keras-pytorch_environment.yml
@@ -1,5 +1,5 @@
 # run: conda env create --file keras-pytorch_environment.yml
-name: keras_pytorch
+name: SYSIDLugano24
 channels:
   - nvidia
   - conda-forge
