Incorporated SS representation; proper Input modification required to avoid wasting samples.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,8 @@
       "request": "launch",
       "program": "${file}",
       "console": "integratedTerminal",
-      "cwd": "${fileDirname}"
+      "cwd": "${fileDirname}",
+      "justMyCode": false
     }
   ]
 }
